--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ html{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: #ed1478;
+    background: crimson;
     right: 30px;
     bottom: 10px;
     line-height: 45px;
